--- a/index.html
+++ b/index.html
@@ -1,68 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>For QMZ ❤️</title>
-
 <style>
-body{
-  margin:0;
-  height:100vh;
+body {
+  margin: 0;
+  height: 100vh;
   background: radial-gradient(circle at top, #163a4a, #08141a);
-  display:flex;
-  justify-content:center;
-  align-items:center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-family: "Segoe UI", Arial, sans-serif;
-  color:white;
+  color: white;
 }
 
-.tree{
-  text-align:center;
-  line-height:1.25;
+.tree {
+  text-align: center;
+  line-height: 1.25;
 }
 
-.star{
-  font-size:36px;
+/* 星星 */
+.star {
+  font-size: 36px;
   animation: twinkle 1.5s infinite alternate;
 }
 
-.heart{
-  font-size:22px;
+/* 爱心叶子 */
+.heart {
+  font-size: 22px;
   animation: glow 2s infinite alternate;
 }
 
-.trunk{
-  margin-top:6px;
-  font-size:20px;
+/* 树干 */
+.trunk {
+  width: 20px;          /* 树干宽度 */
+  height: 80px;         /* 树干高度 */
+  background-color: #8B4513;
+  margin: 6px auto 0 auto;
+  border-radius: 2px;
 }
 
-.signature{
-  margin-top:14px;
-  font-size:18px;
-  letter-spacing:2px;
-  color:#ffb3c6;
+/* 签名 */
+.signature {
+  margin-top: 14px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  color: #ffb3c6;
 }
 
-@keyframes glow{
-  from{
-    text-shadow:0 0 5px #ff4d6d;
-  }
-  to{
-    text-shadow:0 0 20px #ff9aa2;
-  }
+@keyframes glow {
+  from { text-shadow: 0 0 5px #ff4d6d; }
+  to { text-shadow: 0 0 20px #ff9aa2; }
 }
 
-@keyframes twinkle{
-  from{opacity:0.6;}
-  to{opacity:1;}
+@keyframes twinkle {
+  from { opacity: 0.6; }
+  to { opacity: 1; }
 }
 </style>
 </head>
-
 <body>
   <div class="tree">
     <div class="star">⭐</div>
-
     <div class="heart">❤️</div>
     <div class="heart">❤️ ❤️</div>
     <div class="heart">❤️ ❤️ ❤️</div>
@@ -72,7 +72,8 @@ body{
     <div class="heart">❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️</div>
     <div class="heart">❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️ ❤️</div>
 
-    <div class="trunk">🟫🟫</div>
+    <!-- 树干 -->
+    <div class="trunk"></div>
 
     <div class="signature">
       Merry Christmas, <strong>QMZ</strong> ❤️
